# short_url_go/swagger/swagger.json
@@ -31,7 +31,7 @@
                         }
                     },
                     "403": {
-                        "description": "user not exist"
+                        "description": "User not exist"
                     }
                 }
             },
@@ -57,8 +57,8 @@
                     "200": {
                         "description": "{bool} update success!"
                     },
-                    "403": {
-                        "description": "not have role"
+                    "401": {
+                        "description": "Insufficient user permissions"
                     }
                 }
             },
@@ -82,10 +82,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{bool} create success"
+                        "description": "{bool} Create success"
                     },
-                    "403": {
-                        "description": "not role"
+                    "401": {
+                        "description": "Insufficient user permissions"
                     }
                 }
             }
@@ -116,10 +116,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{string} login success"
+                        "description": "{models.User} Login success"
+                    },
+                    "401": {
+                        "description": "The user does not exist."
                     },
                     "403": {
-                        "description": "user not exist"
+                        "description": "Wrong password."
                     }
                 }
             }
@@ -131,24 +134,25 @@
                 ],
                 "summary": "修改一个用户的密码",
                 "description": "update the user's password\n\u003cbr\u003e",
-                "operationId": "UserController.update_password",
+                "operationId": "UserController.Update password",
                 "parameters": [
                     {
                         "in": "body",
-                        "name": "password",
-                        "description": "body for string",
+                        "name": "body",
+                        "description": "body for password",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Page"
-                        }
+                            "type": "string"
+                        },
+                        "type": "string"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "{bool} update success!"
+                        "description": "{bool} update password success!"
                     },
-                    "403": {
-                        "description": "not have role"
+                    "401": {
+                        "description": "Insufficient user permissions"
                     }
                 }
             }
@@ -158,7 +162,9 @@
                 "tags": [
                     "user"
                 ],
+                "summary": "注册",
                 "description": "logs.Info user into the system\n\u003cbr\u003e",
+                "operationId": "UserController.Register",
                 "parameters": [
                     {
                         "in": "body",
@@ -166,7 +172,7 @@
                         "description": "body for user",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.Test"
+                            "$ref": "#/definitions/models.User"
                         }
                     }
                 ],
@@ -175,7 +181,25 @@
                         "description": "{bool} register success"
                     },
                     "403": {
-                        "description": "not role"
+                        "description": "Prohibiting the registration"
+                    }
+                }
+            }
+        },
+        "/user/test": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "测试",
+                "description": "测试使用\n\u003cbr\u003e",
+                "operationId": "UserController.Test",
+                "responses": {
+                    "200": {
+                        "description": "{string} string"
+                    },
+                    "403": {
+                        "description": "User not exist"
                     }
                 }
             }
@@ -204,91 +228,69 @@
                         "description": "{string} delete success!"
                     },
                     "403": {
-                        "description": "uid is empty"
+                        "description": "The uid is empty"
                     }
                 }
             }
         }
     },
     "definitions": {
-        "controllers.Test": {
-            "title": "Test",
-            "type": "object",
-            "properties": {
-                "Nickname": {
-                    "type": "string"
-                },
-                "name_js": {
-                    "type": "string"
-                }
-            }
-        },
         "gorm.DeletedAt": {
             "title": "DeletedAt",
             "type": "object"
-        },
-        "models.Page": {
-            "title": "Page",
-            "type": "object",
-            "properties": {
-                "Desc": {
-                    "type": "boolean"
-                },
-                "Keyword": {
-                    "type": "string"
-                },
-                "PageNum": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "PageSize": {
-                    "type": "integer",
-                    "format": "int64"
-                }
-            }
         },
         "models.User": {
             "title": "User",
             "type": "object",
             "properties": {
-                "CreatedAt": {
+                "create_at": {
+                    "description": "创建时间",
                     "type": "string",
                     "format": "datetime"
                 },
-                "DefaultUrlLength": {
-                    "type": "integer",
-                    "format": "int32"
+                "delete_at": {
+                    "$ref": "#/definitions/gorm.DeletedAt",
+                    "description": "软删除时间"
                 },
-                "DeletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
-                },
-                "Group": {
+                "group": {
+                    "description": "分组",
                     "type": "string"
                 },
-                "ID": {
+                "id": {
+                    "description": "id",
                     "type": "integer",
                     "format": "int32"
                 },
-                "Name": {
+                "name": {
                     "description": "用户名，登录名称",
                     "type": "string"
                 },
-                "Nickname": {
+                "nickname": {
+                    "description": "昵称",
                     "type": "string"
                 },
-                "Password": {
+                "pwd": {
+                    "description": "密码",
                     "type": "string"
                 },
-                "Remarks": {
+                "remarks": {
+                    "description": "备注",
                     "type": "string"
                 },
-                "Role": {
+                "role": {
+                    "description": "角色",
                     "type": "integer",
                     "format": "int32"
                 },
-                "UpdatedAt": {
+                "update_at": {
+                    "description": "最后更新时间",
                     "type": "string",
                     "format": "datetime"
+                },
+                "url_length": {
+                    "description": "配置项：url默认长度",
+                    "type": "integer",
+                    "format": "int32"
                 }
             }
         },
